conf/k8s/mesh-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    wa.service: mesh
  name: mesh
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    wa.service: mesh
status:
  loadBalancer: {}
