conf/k8s/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    wa.service: website
